# open-forge

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-staging.yml  security-scan.yml
contracts/: agent_interface.py
contracts/events/: event-catalog.yaml
contracts/schemas/: engagement.schema.json
docs/: PROGRESS.md  development-plan-part-1.md  development-plan-part-2.md
docs/api/: authentication.md  errors.md  openapi.yaml  rate-limiting.md
docs/development/: architecture.md  code-style.md  contributing.md  local-setup.md  testing.md
docs/guides/: agent-canvas.md  engagement-workflow.md  getting-started.md  ontology-design.md  pipeline-creation.md
docs/plans/: 2026-01-19-comprehensive-code-review.md  2026-01-19-critical-security-remediation.md  2026-01-19-demo-mode-design.md  2026-01-19-deployment-operations.md  2026-01-19-landing-page-design.md  2026-01-19-landing-page-implementation.md  2026-01-19-langchain-ecosystem-integration.md  2026-01-20-palantir-parity-architecture.md  2026-01-20-track-a-forge-connect.md  2026-01-20-track-b-forge-data.md  2026-01-20-track-c-forge-ai.md  2026-01-20-track-e-forge-geo.md  2026-01-20-track-f-forge-media.md  2026-01-20-track-g-forge-collab.md  2026-01-20-track-h-forge-deploy.md  2026-01-21-consolidated-architecture.md
docs/reviews/: 2026-01-19-code-review-report.md
docs/runbooks/: backup-restore.md  installation.md  scaling.md  troubleshooting.md  upgrade.md
infrastructure/docker/: Dockerfile.api  Dockerfile.dagster  Dockerfile.langflow  Dockerfile.ui  dagster.yaml  docker-compose.langflow.yml  docker-compose.langsmith.yml  docker-compose.yml  requirements-dagster.txt
infrastructure/kubernetes/: configmap.yaml  namespaces.yaml  secrets.yaml
infratructure/docker/: docker-compose.yml
scripts/: migrate_memory.py
tests/e2e/: __init__.py  conftest.py  test_api_e2e.py  test_application_phase.py  test_data_foundation_phase.py  (+5 more)
(+134 files in other folders)
