[project]
name = "open-forge"
version = "0.1.0"
description = "Open-source Palantir Foundry alternative with AI-powered Forward Deployed Engineer automation"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # LLM & Agents
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph>=0.2",
    "langsmith>=0.1",

    # Data
    "polars>=1.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "minio>=7.0",

    # Pipeline
    "dagster>=1.7",
    "dagster-postgres>=0.23",

    # API
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "websockets>=12.0",
    "strawberry-graphql>=0.220",

    # Utilities
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",

    # Apache Iceberg
    "pyiceberg>=0.6",

    # Observability
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "opentelemetry-instrumentation-sqlalchemy>=0.44b0",
    "opentelemetry-instrumentation-redis>=0.44b0",
    "opentelemetry-instrumentation-httpx>=0.44b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "isort>=5.13",
    "pre-commit>=3.6",
    "black>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/core/src/core", "packages/agent-framework/src/agent_framework"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["core", "agent_framework", "ontology", "connectors", "agents"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests"]
filterwarnings = ["ignore::DeprecationWarning"]
